Fix icon align based on container line-height

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -3,6 +3,7 @@
   display: inline-block;
   font: normal normal normal #{$mdi-font-size-base}/1 '#{$mdi-font-name}';
   font-size: inherit;
+  line-height: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
